<!--
  ~ Copyright 2020, {{App}}
  ~ Licensed under the Apache License, Version 2.0, "{{App}} Inc".
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~ http://www.apache.org/licenses/LICENSE-2.0
  ~ Unless required by applicable law or agreed to in writing,
  ~ software distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<androidx.preference.PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory app:title="@string/messages_header">

        <EditTextPreference
                app:key="signature"
                app:title="@string/signature_title"
                app:useSimpleSummaryProvider="true" />

        <ListPreference
                app:defaultValue="reply"
                app:entries="@array/reply_entries"
                app:entryValues="@array/reply_values"
                app:key="reply"
                app:title="@string/reply_title"
                app:useSimpleSummaryProvider="true" />

    </PreferenceCategory>

    <PreferenceCategory app:title="@string/sync_header">

        <SwitchPreferenceCompat
                app:key="sync"
                app:title="@string/sync_title" />

        <SwitchPreferenceCompat
                app:dependency="sync"
                app:key="attachment"
                app:summaryOff="@string/attachment_summary_off"
                app:summaryOn="@string/attachment_summary_on"
                app:title="@string/attachment_title" />

    </PreferenceCategory>

    <ListPreference
            android:layout_width="match_parent"
            android:layout_gravity="center"
            android:icon="@drawable/ic_theme"
            app:entryValues="@array/theme_values"
            app:key="theme"
            app:title="@string/title_theme_preference"
            app:useSimpleSummaryProvider="true" />

    <SwitchPreferenceCompat
            app:key="useAppCamera"
            app:summaryOff="@string/useAppCamera_off"
            app:summaryOn="@string/useAppCamera_on"
            app:title="@string/useAppCamera" />

</androidx.preference.PreferenceScreen>
