<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <!-- <item
         android:id="@+id/navigation_home"
         android:icon="@drawable/ic_home_black_24dp"
         &lt;!&ndash;android:color="@color/colorAccent"&ndash;&gt;
         android:title="@string/title_home" />

     <item
         android:id="@+id/navigation_di"
         android:icon="@drawable/ic_dashboard_black_24dp"
         android:title="@string/di" />
 -->
    <item
            android:id="@+id/navigation_main"
            android:icon="@drawable/ic_home_grey_24dp"
            android:title="@string/home" />

    <item
            android:id="@+id/navigation_recent_activities"
            android:icon="@drawable/ic_history_grey_24dp"
            android:title="@string/recent" />

    <item
            android:id="@+id/navigation_wallet"
            android:icon="@drawable/ic_account_wallet_grey_24dp"
            android:title="@string/wallet" />
</menu>
