<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        tools:context=".ui.auth.AuthActivity">

    <data>

        <import type="com.nesst.ui.auth.AuthViewModel" />

        <import type="com.nesst.ui.auth.LoginForm" />

        <import type="com.nesst.ui.auth.RegistrationForm" />

        <import type="com.nesst.ui.auth.PasswordResetForm" />

        <variable
                name="viewModel"
                type="AuthViewModel" />

        <variable
                name="loginForm"
                type="LoginForm" />

        <variable
                name="registrationForm"
                type="RegistrationForm" />

        <variable
                name="passwordResetForm"
                type="PasswordResetForm" />

        <variable
                name="nextAction"
                type="Integer" />
    </data>

    <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@android:color/white"
            android:orientation="vertical"
            android:paddingLeft="@dimen/big"
            android:paddingTop="@dimen/big"
            android:paddingRight="@dimen/big"
            android:paddingBottom="@dimen/big">

        <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical"
                android:padding="16dp">

            <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/welcome"
                    android:textColor="@color/primaryText"
                    android:textSize="24sp"
                    android:textStyle="bold"
                    app:visibility="@{viewModel.showWelcomeMessage}" />

            <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@{viewModel.authActionTitle}"
                    android:textColor="@color/primaryText"
                    android:textSize="16sp"
                    tools:text="Sign in to continue" />
        </androidx.appcompat.widget.LinearLayoutCompat>

        <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="16dp">

            <com.google.android.material.textfield.TextInputLayout
                    style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="16dp"
                    android:hint="@string/prompt_email_or_phone"
                    android:inputType="textEmailAddress"
                    app:errorEnabled="true"
                    app:errorText="@{nextAction == AuthViewModel.ACTION_LOGIN ? loginForm.identifierError : registrationForm.emailError}"
                    app:visibility="@{viewModel.identifierInputVisible}">

                <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@={loginForm.identifier}"
                        tools:text="Email here" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                    style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/prompt_password"
                    android:inputType="textPassword"
                    app:errorEnabled="true"
                    app:errorText="@{loginForm.passwordError}">

                <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@={loginForm.password}"
                        tools:text="Password here" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.button.MaterialButton
                    style="@style/Widget.MaterialComponents.Button.TextButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end"
                    android:enabled="@{viewModel.signInForgotPasswordButtonEnabled}"
                    android:onClick="@{viewModel::loginOrForgotPasswordClicked}"
                    android:paddingLeft="8dp"
                    android:paddingRight="8dp"
                    android:text="@{viewModel.signInResetText}"
                    app:cornerRadius="0dp" />

            <com.google.android.material.button.MaterialButton
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:enabled="@{loginForm.dataValid}"
                    android:onClick="@{viewModel::authButtonClicked}"
                    android:padding="16dp"
                    android:text="@{viewModel.authActionButtonText}"
                    app:cornerRadius="0dp"
                    tools:enabled="true"
                    tools:text="Sign in" />

            <com.google.android.material.button.MaterialButton
                    style="@style/Widget.MaterialComponents.Button.TextButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:enabled="@{viewModel.signInForgotPasswordButtonEnabled}"
                    android:onClick="@{viewModel::createAccountClicked}"
                    android:paddingLeft="8dp"
                    android:paddingRight="8dp"
                    android:text="@string/create_account"
                    app:cornerRadius="0dp" />

            <ProgressBar
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginStart="32dp"
                    android:layout_marginTop="64dp"
                    android:layout_marginEnd="32dp"
                    android:layout_marginBottom="64dp"
                    app:visibility="@{loginForm.progressLoading}"
                    tools:visibility="visible" />
        </androidx.appcompat.widget.LinearLayoutCompat>

    </androidx.appcompat.widget.LinearLayoutCompat>
</layout>